--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <style>
         .container {
+            margin:20px;
             padding-top:20px;
             min-height: 100vh;
             background-size: cover;
