--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 
     <style>
         .container {
+            color:white;
             margin:20px;
             padding-top:20px;
             min-height: 100vh;
+            background-color:black;
             background-size: cover;
             display: flex;
             flex-direction: column;
