--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <style>
         .container {
             color:white;
-            margin:20px;
-            padding-top:20px;
+            padding:20px;
             min-height: 100vh;
             background-color:black;
             background-size: cover;
