--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>tictactoe</title>
 
     <style>
+        body{
+            margin:0;
+        }
         .container {
             color:white;
             padding:20px;
